--- a/css/common.css
+++ b/css/common.css
@@ -11,7 +11,7 @@ body {
   background-color: #fafafa;
   color: #212121;
   line-height: 1.5;
-  padding: 50px;
+  padding: 10px;
 }
 
 input {
@@ -36,6 +36,22 @@ button {
 .js-list {
   display: flex;
   flex-wrap: wrap;
-  gap: 30px;
+  gap: 5px;
   justify-content: center;
+}
+.car-card {
+  background-color: bisque;
+  margin: 2%;
+  padding: 2%;
+}
+.car-button {
+  background-color: rgb(173, 173, 209);
+}
+.error {
+  color: #ff0000;
+}
+.square {
+  width: 50px;
+  height: 50px;
+  background-color: #ff0000;
 }
